[package]
name = "rustwari"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.19"
anyhow = "*"
rayon = "*"
image = "*"
chrono = "*"
url = "*"
http = "*"
serde = {version = "*", features = ["derive"]} 
serde_yaml = "*"
async-recursion = "1.0.0"
log = "*"
wallpaper = "*"


[dependencies.opencv]
version = "*"

[dependencies.tokio]
version = "1.*"
features = ["full"] 

[dependencies.reqwest]
version = "*"
