[package]
name = "rustwari"
version = "0.1.0"
edition = "2021"
author = "jer"
opt-level = 3

[dependencies]
anyhow = "*"
async-recursion = "1.0.0"
chrono = "*"
futures = "0.3.19"
http = "*"
image = "*"
log = "*"
rayon = "*"
serde = {version = "*", features = ["derive"]} 
serde_yaml = "*"
url = "*"
wallpaper = "*"


[dependencies.opencv]
version = "*"

[dependencies.tokio]
version = "1.*"
features = ["full"] 

[dependencies.reqwest]
version = "*"
